# react-agent

./: .gitignore  README.md  main.py  pyproject.toml  simple_test.py  test_agent.py  test_prompt_manager.py  test_simple.py
.trae/documents/: prd.md  technical-architecture.md
.trae/specs/agent-recommender/: checklist.md  spec.md  tasks.md
config/: .env.example
config/prompts/: custom_prompts.example.json  example_templates.yaml
config/system_prompts/: code_expert.md  general_assistant.md  streamer_recommender.md  system_prompts.example.json  system_prompts.json  test_custom.md
docs/: AGENT_API.md  EXAMPLES.md  QUICKSTART.md  REPORT.md  api.md
examples/: README.md  demo_agent.py  demo_basic.py
examples/data/: streamer_demo.txt
src/agent/: __init__.py  example_usage.py  memory.py  prompt_manager.py  react_agent.py  system_prompt_manager.py
src/api/: app.py  routes.py  schemas.py
src/models/: __init__.py  config.py  doubao_embeddings.py  embedding_manager.py  model_manager.py
src/tools/: __init__.py  document_loader.py  knowledge_base.py  web_search.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_agent.py  test_integration.py  test_knowledge_base.py  test_memory.py  test_models.py  test_prompt_manager.py  test_web_search.py
web/: index.html  package.json
web/src/: App.tsx  api.ts  index.css  store.ts  types.ts
web/src/components/: ChatView.tsx  KnowledgeView.tsx  SettingsPanel.tsx  SettingsView.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
